// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[PortfolioPageUI] should render desktop view correctly 1`] = `
<DocumentFragment>
  <main
    class="container"
    style="cursor: grab;"
  >
    <div>
      CardsProject Mock
    </div>
  </main>
</DocumentFragment>
`;

exports[`[PortfolioPageUI] should render mobile view correctly 1`] = `
<DocumentFragment>
  <main
    class="mobile-message"
    data-cy="content"
    style=""
  >
    Please open this page from your PC
  </main>
</DocumentFragment>
`;
